--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
     <p>If you do not see the <b>practice.js</b> file appear in the list, refresh the page while you have the debugger open and the <b>Sources</b> tab active.</p>
 
+    <p>Mac Was also here</p>
+
     <p>For more information, checkout: <a href="https://developers.google.com/web/tools/chrome-devtools/?utm_source=dcc&utm_medium=redirect&utm_campaign=2016q3">Chrome DevTools</a></p>
 
     <script src="practice.js"></script>
